Storyboard organization refactoring

--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -263,10 +263,10 @@
             </objects>
             <point key="canvasLocation" x="4767" y="-1677"/>
         </scene>
-        <!--Sick-->
+        <!--SickRequest-->
         <scene sceneID="gPM-RV-cKe">
             <objects>
-                <viewControllerPlaceholder storyboardName="Sick" id="vXb-yr-Aai" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="SickRequest" id="vXb-yr-Aai" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3iO-T9-dgS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4720" y="-1439"/>
@@ -356,10 +356,10 @@
             </objects>
             <point key="canvasLocation" x="2641" y="-1402"/>
         </scene>
-        <!--Bonus-->
+        <!--BonusRequest-->
         <scene sceneID="9Lo-K0-eFV">
             <objects>
-                <viewControllerPlaceholder storyboardName="Bonus" id="rxj-Jz-1Mw" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="BonusRequest" id="rxj-Jz-1Mw" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UG7-Wj-dop" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4730" y="-944"/>
