--- a/Hawaii/UI/Storyboard/History.storyboard
+++ b/Hawaii/UI/Storyboard/History.storyboard
@@ -55,7 +55,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iz3-P0-5yg">
-                                <rect key="frame" x="0.0" y="200" width="375" height="340"/>
+                                <rect key="frame" x="16" y="200" width="343" height="340"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yNP-vg-qO9">
                                         <rect key="frame" x="30" y="30" width="34" height="21"/>
@@ -64,13 +64,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <pickerView contentMode="scaleToFill" horizontalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="Poz-Fr-B2z">
-                                        <rect key="frame" x="94" y="-9.6666666666666572" width="251" height="100"/>
+                                        <rect key="frame" x="94" y="-9.6666666666666572" width="219" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="DMc-7C-geR"/>
                                         </constraints>
                                     </pickerView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LtP-SE-lqO">
-                                        <rect key="frame" x="30" y="290" width="315" height="30"/>
+                                        <rect key="frame" x="30" y="290" width="283" height="30"/>
                                         <state key="normal" title="Filter"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="redAndRounded"/>
@@ -101,15 +101,15 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qgS-RM-K0V">
-                                        <rect key="frame" x="296" y="110" width="51" height="31"/>
+                                        <rect key="frame" x="264" y="110" width="51" height="31"/>
                                         <color key="onTintColor" red="1" green="0.00060692348051816225" blue="0.20844578742980957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </switch>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uhg-Hq-DmI">
-                                        <rect key="frame" x="296" y="155" width="51" height="31"/>
+                                        <rect key="frame" x="264" y="155" width="51" height="31"/>
                                         <color key="onTintColor" red="1" green="0.00060692348051816225" blue="0.20844578742980957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </switch>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZLb-CH-3MO">
-                                        <rect key="frame" x="296" y="200" width="51" height="31"/>
+                                        <rect key="frame" x="264" y="200" width="51" height="31"/>
                                         <color key="onTintColor" red="1" green="0.00060692348051816225" blue="0.20844578742980957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </switch>
                                 </subviews>
@@ -143,7 +143,7 @@
                         <constraints>
                             <constraint firstItem="dJz-Fa-i4D" firstAttribute="top" secondItem="ncC-42-5es" secondAttribute="topMargin" id="ABu-jg-Vxg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dJz-Fa-i4D" secondAttribute="trailing" id="Chg-uJ-L1I"/>
-                            <constraint firstItem="Iz3-P0-5yg" firstAttribute="leading" secondItem="Bv3-WH-5uA" secondAttribute="leading" id="GJI-le-M4J"/>
+                            <constraint firstItem="Iz3-P0-5yg" firstAttribute="leading" secondItem="Bv3-WH-5uA" secondAttribute="leading" constant="16" id="GJI-le-M4J"/>
                             <constraint firstItem="Iz3-P0-5yg" firstAttribute="centerX" secondItem="Bv3-WH-5uA" secondAttribute="centerX" id="Jp8-1q-4bg"/>
                             <constraint firstAttribute="bottomMargin" secondItem="dJz-Fa-i4D" secondAttribute="bottom" id="NHC-Th-oPI"/>
                             <constraint firstItem="Iz3-P0-5yg" firstAttribute="centerY" secondItem="Bv3-WH-5uA" secondAttribute="centerY" multiplier="0.9" id="boD-eZ-2Td"/>
