--- a/Hawaii/UI/Storyboard/TeamCalendar.storyboard
+++ b/Hawaii/UI/Storyboard/TeamCalendar.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6C-s7-klc">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="755"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="555"/>
                                         <subviews>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dCn-vf-GKa">
                                                 <rect key="frame" x="15" y="5" width="345" height="41"/>
@@ -36,7 +36,7 @@
                                                 </segments>
                                             </segmentedControl>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="c11-4n-1mD">
-                                                <rect key="frame" x="0.0" y="45" width="375" height="710"/>
+                                                <rect key="frame" x="0.0" y="45" width="375" height="510"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YM-s3-wOU">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
@@ -179,19 +179,10 @@
                                                         </collectionViewFlowLayout>
                                                         <cells/>
                                                     </collectionView>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pxO-bJ-pA2">
-                                                        <rect key="frame" x="0.0" y="510" width="375" height="200"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="200" id="W9E-FL-8xG"/>
-                                                        </constraints>
-                                                    </view>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstItem="pxO-bJ-pA2" firstAttribute="leading" secondItem="UXb-JU-fla" secondAttribute="leading" id="3da-Cx-5UA"/>
                                                     <constraint firstAttribute="trailing" secondItem="8YM-s3-wOU" secondAttribute="trailing" id="AVs-MZ-BOC"/>
                                                     <constraint firstItem="8YM-s3-wOU" firstAttribute="leading" secondItem="c11-4n-1mD" secondAttribute="leading" id="a0p-au-9cL"/>
-                                                    <constraint firstItem="pxO-bJ-pA2" firstAttribute="centerX" secondItem="UXb-JU-fla" secondAttribute="centerX" id="aHT-28-xCK"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
@@ -199,8 +190,8 @@
                                         <constraints>
                                             <constraint firstItem="dCn-vf-GKa" firstAttribute="leading" secondItem="h6C-s7-klc" secondAttribute="leading" constant="15" id="Fqd-kp-F8m"/>
                                             <constraint firstAttribute="trailing" secondItem="dCn-vf-GKa" secondAttribute="trailing" constant="15" id="HmL-QA-J3k"/>
+                                            <constraint firstAttribute="bottom" secondItem="UXb-JU-fla" secondAttribute="bottom" id="N2t-A9-ngJ"/>
                                             <constraint firstAttribute="trailing" secondItem="c11-4n-1mD" secondAttribute="trailing" id="cXw-1F-phc"/>
-                                            <constraint firstAttribute="bottom" secondItem="pxO-bJ-pA2" secondAttribute="bottom" id="eBr-Vp-2kU"/>
                                             <constraint firstItem="c11-4n-1mD" firstAttribute="top" secondItem="dCn-vf-GKa" secondAttribute="bottom" id="hUq-9x-kP6"/>
                                             <constraint firstAttribute="bottom" secondItem="c11-4n-1mD" secondAttribute="bottom" id="lT0-xS-say"/>
                                             <constraint firstItem="dCn-vf-GKa" firstAttribute="top" secondItem="h6C-s7-klc" secondAttribute="top" constant="5" id="n1d-jV-XYy"/>
